src/objects/QTO_Customer_Document_Issue_Log__c.object
<CustomObject>
    <description>Represents an issue found during Association/Validation of Customer Document Data</description>
    <fields>
        <fullName>Customer_Purchase_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer Purchase Order</label>
        <referenceTo>Apttus_Config2__CustomerPurchaseOrder__c</referenceTo>
        <relationshipLabel>Customer Document Issue Logs</relationshipLabel>
        <relationshipName>Customer_Document_Issue_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QTO_CustomerDocumentId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the customer document</description>
        <inlineHelpText>ID of the customer document</inlineHelpText>
        <label>Customer Document</label>
        <referenceTo>Customer_Document__c</referenceTo>
        <relationshipLabel>Customer Document Issue Logs</relationshipLabel>
        <relationshipName>Customer_Document_Issue_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QTO_CustomerDocumentItemId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the customer document Item</description>
        <inlineHelpText>ID of the customer document Item</inlineHelpText>
        <label>Customer Document Line Items</label>
        <referenceTo>Customer_Document_Line_Items__c</referenceTo>
        <relationshipLabel>Customer Document Issue Logs</relationshipLabel>
        <relationshipName>Customer_Document_Issue_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QTO_ErrorType__c</fullName>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Error</fullName>
                </value>
                <value>
                    <fullName>Warning</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QTO_IssueDetails__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Issue Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>QTO_Module__c</fullName>
        <description>Value on this field would be used to identify module for which logs belongs to.</description>
        <label>Module</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Association</fullName>
                </value>
                <value>
                    <fullName>Matching</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QTO_Return_Code__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Return Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Customer Document Issue Log</label>
    <nameField>
        <displayFormat>CDLogs-{00000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customer Document Issue Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>